test: Agregar suite completa de tests con mocks
- Configuración de Vitest para testing
- Mocks de Octokit para simular API de GitHub sin afectar repositorios reales
- Tests unitarios para Pull Requests (crear, mergear, cerrar, actualizar, reviews)
- Tests unitarios para Repositorios (listar, obtener, branches)
- Tests unitarios para Issues (listar, crear)
- Tests unitarios para Usuario (obtener info)
- Documentación completa en TESTING.md
- Scripts de npm/pnpm para ejecutar tests
- Configuración de cobertura de código

Los tests usan mocks y NO afectan repositorios reales.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "build": "tsc",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:run": "vitest run"
   },
   "keywords": [
     "mcp",
@@ -40,8 +44,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "@vitest/ui": "^1.0.0",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.0"
   }
 }
 
