docs: Agregar documentación de seguridad y script genérico
- Agregar SECURITY.md con mejores prácticas de seguridad
- Crear protect-branch.example.sh como plantilla genérica
- Agregar protect-main-branch.sh y test-protect-branch.js a .gitignore
- Documentar herramienta protect_branch en README
- Agregar sección de seguridad en README con advertencias

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ dist/
 *.tsbuildinfo
 coverage/
 .vitest/
+
+# Scripts con información sensible (valores hardcodeados de repositorios específicos)
+protect-main-branch.sh
+test-protect-branch.js
