--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -1,16 +1,16 @@
-name: Auto-approve PRs from repository owner
+name: Auto-merge PRs from repository owner
 
 on:
   pull_request:
     types: [opened, synchronize]
 
 jobs:
-  auto-approve:
-    name: Auto-approve PRs from owner
+  auto-merge:
+    name: Auto-merge PRs from owner
     runs-on: ubuntu-latest
-    # Permisos necesarios para comentar y aprobar PRs
+    # Permisos necesarios para mergear PRs
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
     # Solo ejecutar si el PR es del dueño del repositorio
     if: github.event.pull_request.user.login == github.repository_owner
@@ -19,81 +19,86 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Try auto-approve with PAT
-        continue-on-error: true
-        uses: actions/github-script@v7
-        id: try_approve
+      - name: Check PR status and merge
         env:
           PAT_CONFIGURED: ${{ secrets.GH_PAT != '' }}
+        uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GH_PAT }}
+          github-token: ${{ secrets.GH_PAT || secrets.GITHUB_TOKEN }}
           script: |
             const { owner, repo, number } = context.issue;
             const prAuthor = context.payload.pull_request.user.login;
             const repoOwner = context.repo.owner;
             
-            // Verificar si el PAT está configurado
-            if (process.env.PAT_CONFIGURED !== 'true') {
-              console.log('⚠️ GH_PAT no está configurado, saltando auto-aprobación');
+            if (prAuthor !== repoOwner) {
+              console.log(`⏭️ Saltando: El PR #${number} fue creado por ${prAuthor}, no por el dueño (${repoOwner})`);
               process.exit(0);
             }
             
-            if (prAuthor === repoOwner) {
-              console.log(`Auto-aprobando PR #${number} del dueño del repositorio (${prAuthor}) usando PAT`);
+            // Verificar si el PAT está configurado
+            const hasPAT = process.env.PAT_CONFIGURED === 'true';
+            
+            if (!hasPAT) {
+              console.log('⚠️ GH_PAT no está configurado. Agregando comentario...');
+              
+              await github.rest.issues.createComment({
+                owner,
+                repo,
+                issue_number: number,
+                body: `✅ **PR listo para mergear**: Este PR fue creado por el dueño del repositorio y está listo para ser mergeado.\n\n💡 **Para auto-merge automático**: Configura un Personal Access Token (PAT) con permisos de \`repo\` como secret \`GH_PAT\` en la configuración del repositorio. Ver [SETUP_AUTO_APPROVE.md](.github/workflows/SETUP_AUTO_APPROVE.md) para más detalles.\n\n⚠️ **Nota**: GitHub no permite que un usuario apruebe su propio PR. Este workflow puede mergear automáticamente el PR después de que pasen los tests si configuras el PAT.`
+              });
+              
+              process.exit(0);
+            }
+            
+            // Obtener estado del PR
+            const pr = await github.rest.pulls.get({
+              owner,
+              repo,
+              pull_number: number
+            });
+            
+            console.log(`Estado del PR #${number}: mergeable=${pr.data.mergeable}, mergeable_state=${pr.data.mergeable_state}`);
+            
+            // Verificar si está listo para mergear
+            if (pr.data.mergeable === true && pr.data.mergeable_state === 'clean') {
+              console.log(`🔄 Mergeando automáticamente PR #${number}...`);
               
               try {
-                await github.rest.pulls.createReview({
+                await github.rest.pulls.merge({
                   owner,
                   repo,
                   pull_number: number,
-                  event: 'APPROVE',
-                  body: '✅ **Auto-aprobado**: Este PR fue creado por el dueño del repositorio y cumple con los requisitos de calidad.'
+                  merge_method: 'squash',
+                  commit_title: `Merge PR #${number}: ${pr.data.title}`,
+                  commit_message: `Auto-merged PR #${number} del dueño del repositorio\n\n${pr.data.body || ''}`
                 });
                 
-                console.log(`✅ PR #${number} auto-aprobado exitosamente`);
+                console.log(`✅ PR #${number} mergeado exitosamente`);
               } catch (error) {
-                console.error(`❌ Error al aprobar PR: ${error.message}`);
+                console.error(`❌ Error al mergear PR: ${error.message}`);
+                
+                // Si falla por protección de rama, agregar comentario explicativo
+                if (error.status === 405 || error.message.includes('protected')) {
+                  await github.rest.issues.createComment({
+                    owner,
+                    repo,
+                    issue_number: number,
+                    body: `⚠️ **No se pudo mergear automáticamente**: El PR requiere aprobación debido a la protección de rama.\n\n💡 **Solución**: Aproba y mergea manualmente este PR, o ajusta la protección de rama para permitir que el dueño pueda mergear sin aprobación. Ver [SETUP_AUTO_APPROVE.md](.github/workflows/SETUP_AUTO_APPROVE.md) para más detalles.`
+                  });
+                }
+                
                 throw error;
               }
-            }
-
-      - name: Add comment (fallback if PAT failed or not configured)
-        if: always() && (steps.try_approve.outcome != 'success' || steps.try_approve.outcome == 'skipped')
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { owner, repo, number } = context.issue;
-            const prAuthor = context.payload.pull_request.user.login;
-            const repoOwner = context.repo.owner;
-            
-            if (prAuthor === repoOwner) {
-              // Verificar si ya fue aprobado
-              const reviews = await github.rest.pulls.listReviews({
+            } else {
+              console.log(`⏳ PR #${number} no está listo para mergear. Estado: ${pr.data.mergeable_state}`);
+              console.log('💡 Esperando a que los tests pasen...');
+              
+              // Agregar comentario indicando que está esperando
+              await github.rest.issues.createComment({
                 owner,
                 repo,
-                pull_number: number
+                issue_number: number,
+                body: `⏳ **Esperando tests**: El PR será mergeado automáticamente una vez que todos los tests pasen.\n\nEstado actual: \`${pr.data.mergeable_state}\``
               });
-              
-              const isApproved = reviews.data.some(r => r.state === 'APPROVED');
-              
-              if (!isApproved) {
-                console.log(`Agregando comentario al PR #${number} del dueño del repositorio (${prAuthor})`);
-                
-                const commentBody = `✅ **PR listo para mergear**: Este PR fue creado por el dueño del repositorio y está listo para ser mergeado.\n\n💡 **Para auto-aprobación automática**: Configura un Personal Access Token (PAT) con permisos de \`repo\` como secret \`GH_PAT\` en la configuración del repositorio. Ver [SETUP_AUTO_APPROVE.md](.github/workflows/SETUP_AUTO_APPROVE.md) para más detalles.`;
-                
-                await github.rest.issues.createComment({
-                  owner,
-                  repo,
-                  issue_number: number,
-                  body: commentBody
-                });
-                
-                console.log(`✅ Comentario agregado al PR #${number}`);
-              } else {
-                console.log(`✅ PR #${number} ya fue aprobado`);
-              }
-            } else {
-              console.log(`⏭️  Saltando: El PR #${number} fue creado por ${prAuthor}, no por el dueño (${repoOwner})`);
             }
-
