chore: bump version to 1.0.2 - Mejoras en instalación Windows
- Agregado método con npx como alternativa recomendada
- Agregado bin mcp-github-server para consistencia
- Mejorada documentación con troubleshooting específico para Windows
- Actualizado ejemplo de configuración para usar npx

--- a/cursor-config.example.json
+++ b/cursor-config.example.json
@@ -1,8 +1,8 @@
 {
   "mcpServers": {
     "github": {
-      "command": "node",
-      "args": ["/Users/parismendi/Documents/mcp-github/dist/index.js"],
+      "command": "npx",
+      "args": ["-y", "mcp-github-server"],
       "env": {
         "GITHUB_TOKEN": "tu_token_aqui"
       }
